@@ -5485,4 +5485,121 @@ function album_selection_options()
     return $options;
 }
 
+/**
+* Function used to delete a folder and everything within it except symlinks.
+* Does not perform any checks against the path parameter, so only perform
+* this function against trusted, validated paths and never against un-sanitized
+* user input!
+* Function should be performed by admin only, but is not limited to admin. There
+* are no particular permission-checks.
+* Contains hard-coded English language strings that are meant for debug output only.
+* @param $path full-path or relative path to folder
+* @return result of deletion
+*/
+function cpg_folder_file_delete($path) {
+	global $CONFIG;
+	if ($CONFIG['debug_notice'] == 0) {
+		$output = '';
+	} else {
+		if ($CONFIG['debug_mode'] == 1) {
+			$output = 1;
+		} elseif ($CONFIG['debug_mode'] == 2 && defined(GALLERY_ADMIN_MODE)) {
+			$output = 1;
+		} else {
+			$output = '';
+		}
+	}
+	// Perform some validity checks first
+	rtrim($path,'/'); // if the path has a trailing slash we remove it here
+	if (is_link($path)) { // We don't want to delete symlinks, so let's just return some text
+		if ($output != '') {
+			return $path . ' appears to be a symlink - we won\'t delete them for security reasons';
+		} else {
+			return;
+		}
+	}
+	if (!file_exists($path) && !is_dir($path)) {// if the path is not valid
+		if ($output != '') {
+			return 'Path ' . $path . ' does not exist';
+		} else {
+			return;
+		}
+	} elseif (!is_readable($path)) {// ... if the path is not readable
+		if ($output != '') {
+			return 'Path ' . $path . ' is not readable';
+		} else {
+			return;
+		}
+	}	
+	if (is_dir($path)) {
+		if (version_compare(PHP_VERSION, '5.0.0') < 0) {
+			$entries = array();
+			if ($handle = opendir($path)) {
+				while (false !== ($file = readdir($handle))) {
+					$entries[] = $file;
+				}
+				closedir($handle);
+			}
+		} else {
+			$entries = scandir($path);
+			if ($entries === false) {
+				$entries = array();
+			}
+		}
+		foreach ($entries as $entry) {
+			if ($entry != '.' && $entry != '..') {
+				cpg_folder_file_delete($path.'/'.$entry);
+			}
+		}
+		// Delete the folder
+		if ($output != '') {
+			$result = rmdir($path);
+		} else {
+			$result = @rmdir($path);
+		}
+		if ($output != '') {
+			if ($result == 1) {
+				// We have issued the command to delete the folder and everything
+				// appears to have gone fine, but we can not be sure if we succeeded,
+				// so we'll test if the folder still is there.
+				clearstatcache(); // We need to clear the cache before we check if the folder is still there.
+				if (is_dir($path)) {
+					return 'Couldn\'t delete folder ' . $path . '. Review permissions!';
+				} else {
+					return 'Folder deleted successfully';
+				}
+			} else {
+				return 'Couldn\'t delete folder ' . $path . '. Review permissions!';
+			}
+		} else {
+			return;
+		}
+	} else {
+		// Delete the file
+		if ($output != '') {
+			$result = unlink($path);
+		} else {
+			$result = @unlink($path);
+		}
+		if ($output != '') {
+			if ($result == 1) {
+				// We have issued the command to delete the file and everything
+				// appears to have gone fine, but we can not be sure if we succeeded,
+				// so we'll test if the file still is there.
+				clearstatcache(); // We need to clear the cache first.
+				if (file_exists($path)) {
+					return 'Couldn\'t delete file ' . $path . '. Review permissions!';
+				} else {
+					return 'File deleted successfully';
+				}
+			} else {
+				return 'Couldn\'t delete file ' . $path . '. Review permissions!';
+			}
+		} else {
+			return;
+		}
+	}
+}
+
+
 ?>
